tests/valid/replace/replace_through_immut_bound_mut_ref.facet
fn f(mut x: unrestricted isize) -> unrestricted isize {
    let r: unrestricted &mut unrestricted isize = (&mut x) in
    let old: unrestricted isize = (replace *r 42) in
    old
}
